# gameProject

./: .gitignore  CMakeLists.txt  README.md  bsc.bat
include/: platform.h  player.h  utils.h
src/: hw.cpp  main.cpp  platform.cpp  player.cpp  utils.cpp
